--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Document</title>
+    <title>Magic Noodles</title>
 </head>
 <body >
     <div style="width:800px;height:1122.5px;background-color: #eee;margin-left: auto;margin-right: auto;">
         <header id="header">
-            <h1>Gusteau's Restaurants</h1>
-            <div id="logo">
-                <img src="./img/Gusteau-logo.jpg" alt="Gusteau's Logo">
+            <h1>Magic Noodles</h1>
+            <div id="header__logo">
+                <img src="./" alt="Gusteau's Logo">
             </div>
         </header>
-            <table>
+            <table id="menu">
 
             </table>
         <footer id="footer"></footer>
