new font and directorys

--- a/index.html
+++ b/index.html
@@ -1,24 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Magic Noodles</title>
-</head>
-<body >
-    <div style="width:800px;height:1122.5px;background-color: #eee;margin-left: auto;margin-right: auto;">
-        <header id="header">
-            <h1>Magic Noodles</h1>
-            <div id="header__logo">
-                <img src="./" alt="Gusteau's Logo">
-            </div>
-        </header>
-            <table id="menu">
-
-            </table>
-        <footer id="footer"></footer>
+  </head>
+  <body>
+    <div
+      style="
+        width: 800px;
+        height: 1122.5px;
+        background-color: #eee;
+        margin-left: auto;
+        margin-right: auto;
+      "
+      id="main"
+    >
+      <header id="header">
+        <h1 id="header__title">Magic Noodles</h1>
+        <nav id="header__nav">
+          <ul id="nav-list">
+            <li class="nav-item">
+              <button onclick="" id="spicy-noodles">Spicy Noodles</button>
+            </li>
+            <li class="nav-item">
+              <button onclick="" id="miso-noodles">Tradicional Noodles</button>
+            </li>
+            <li class="nav-item">
+                <button onclick="" id="special-noodles">Special Noodles</button>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <table id="menu"></table>
+      <footer id="footer"></footer>
     </div>
-</body>
+  </body>
 </html>
