script.js created

--- a/index.html
+++ b/index.html
@@ -23,19 +23,22 @@
         <nav id="header__nav">
           <ul id="nav-list">
             <li class="nav-item">
-              <button onclick="" id="spicy-noodles">Spicy Noodles</button>
+              <button onclick="spicyNoodles()" id="spicy-noodles" class="noodle-select">Spicy Noodles</button>
             </li>
             <li class="nav-item">
-              <button onclick="" id="miso-noodles">Tradicional Noodles</button>
+              <button onclick="tradicionalNoodles()" id="tradicional-noodles" class="noodle-select">Tradicional Noodles</button>
             </li>
             <li class="nav-item">
-                <button onclick="" id="special-noodles">Special Noodles</button>
+              <button onclick="specialNoodles()" id="special-noodles" class="noodle-select">Special Noodles</button>
             </li>
           </ul>
         </nav>
       </header>
       <table id="menu"></table>
-      <footer id="footer"></footer>
+      <footer id="footer">
+        <address>Yanaka Ginza Shopping Street, 328</address>
+      </footer>
     </div>
   </body>
+  <script src="script.js"></script>
 </html>
