structure html finished

--- a/index.html
+++ b/index.html
@@ -23,18 +23,47 @@
         <nav id="header__nav">
           <ul id="nav-list">
             <li class="nav-item">
-              <button onclick="spicyNoodles()" id="spicy-noodles" class="noodle-select">Spicy Noodles</button>
+              <button
+                onclick="spicyNoodles()"
+                id="spicy-noodles"
+                class="noodle-select"
+              >
+                Spicy Noodles
+              </button>
             </li>
             <li class="nav-item">
-              <button onclick="tradicionalNoodles()" id="tradicional-noodles" class="noodle-select">Tradicional Noodles</button>
+              <button
+                onclick="tradicionalNoodles()"
+                id="tradicional-noodles"
+                class="noodle-select"
+              >
+                Tradicional Noodles
+              </button>
             </li>
             <li class="nav-item">
-              <button onclick="specialNoodles()" id="special-noodles" class="noodle-select">Special Noodles</button>
+              <button
+                onclick="specialNoodles()"
+                id="special-noodles"
+                class="noodle-select"
+              >
+                Special Noodles
+              </button>
             </li>
           </ul>
         </nav>
       </header>
-      <table id="menu"></table>
+      <table id="menu">
+        <tr id="th-row">
+          <td id="th-1">Noodle Type 1</td>
+          <td id="th-2">Noodle Type 2</td>
+          <td id="th-3">Noodle Type 3</td>
+        </tr>
+        <tr id="row-1">
+          <td id="row-1-1">Noodle 1</td>
+          <td id="row-1-2">Noodle 2</td>
+          <td id="row-1-3">Noodle 3</td>
+        </tr>
+      </table>
       <footer id="footer">
         <address>Yanaka Ginza Shopping Street, 328</address>
       </footer>
