--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
           <td id="th-3">Noodle Type 3</td>
         </tr>
         <tr id="row-1">
-          <td id="row-1-1">Noodle 1</td>
-          <td id="row-1-2">Noodle 2</td>
-          <td id="row-1-3">Noodle 3</td>
+          <td id="row-1-1"><img id="option1" src=""></td>
+          <td id="row-1-2"><img id="option2" src=""></td>
+          <td id="row-1-3"><img id="option3" src=""></td>
         </tr>
       </table>
       <footer id="footer">
